--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,9 +42,9 @@ ios-build-and-publish: &ios-build-and-publish
     - run:
         command: sudo gem install bundler:2.1.4
         working_directory: ios
-    # - run:
-    #     command: sudo bundle install
-    #     working_directory: ios
+    - run:
+        command: sudo bundle install
+        working_directory: ios
     - restore_cache:
         key: bundle-v1-{{ checksum "ios/Gemfile.lock" }}-{{ arch }}
     - run:
@@ -53,18 +53,18 @@ ios-build-and-publish: &ios-build-and-publish
     - run:
         command: bundle check || bundle install --path vendor/bundle
         working_directory: ios
-    # - run:
-    #     name: Fastlane upgrade
-    #     command: sudo bundle update fastlane
-    #     working_directory: ios
+    - run:
+        name: Fastlane upgrade
+        command: sudo bundle update fastlane
+        working_directory: ios
     - save_cache:
         key: bundle-v1-{{ checksum "ios/Gemfile.lock" }}-{{ arch }}
         paths:
           - ios/vendor/bundle
-    # - run:
-    #     name: Fastlane plugins upgrade
-    #     command: bundle exec fastlane update_plugins
-    #     working_directory: ios
+    - run:
+        name: Fastlane plugins upgrade
+        command: bundle exec fastlane update_plugins
+        working_directory: ios
     - run: sudo gem install pry
     - run:
         name: Fastlane build for AppCenter
